fix nav positioning on mobile

--- a/breeze.scss
+++ b/breeze.scss
@@ -267,6 +267,16 @@ a
 
 @media screen and (max-width: 600px) 
 {
+    nav 
+    {
+        position: relative;
+        top: -10px;
+        left: -10px;
+
+        padding: 0;
+        margin: 0;
+    }
+
     nav li
     {
         font-size: 1.5em;
